--- a/src/components/movies-list/movies-list.css
+++ b/src/components/movies-list/movies-list.css
@@ -1,17 +1,35 @@
-.flex-col {
-    width: 100%;
-    display: flex;
+.movies-list {
+    padding-top: 34px;
+    padding-bottom: 36px;
 }
 
-.genre-panel {
-    display: inline-block;
-    /* width: 46px; */
-    padding: 0 4px;
-    height: 20px;
-    line-height: 16px;
-    background-color: #FAFAFA;
-    box-sizing: border-box;
-    border-radius: 2px;
-    border: 1px solid #d9d9d9;
+.movie-cell {
+    width: 100%;
+    display: flex;
+    max-width: 451px;
+    height: 279px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15),
+        0px -4px 12px rgba(0, 0, 0, 0.15);
+}
 
+.movie-title {
+    margin-top: 10px;
+    margin-bottom: 7px;
+    height: 28px;
+    line-height: 28px;
+    max-width: 200px;
+    height: auto;
+}
+
+.movie-release-date {
+    height: 22px;
+    display: inline-block;
+    line-height: 22px;
+}
+
+.poster-container {
+    flex-basis: 183px;
+    /* width: 100%; */
+    background-size: 100% auto !important;
+    /* min-width: 132px; */
 }
