--- a/src/components/movies-list/movies-list.css
+++ b/src/components/movies-list/movies-list.css
@@ -4,21 +4,27 @@
 }
 
 .movie-cell {
+    position: relative;
     width: 100%;
-    display: flex;
     max-width: 451px;
-    height: 279px;
+    min-width: 388px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15),
         0px -4px 12px rgba(0, 0, 0, 0.15);
 }
 
+.movie-cell-container {
+    width: 100%;
+    display: flex;
+}
+
 .movie-title {
     margin-top: 10px;
-    margin-bottom: 7px;
-    height: 28px;
-    line-height: 28px;
-    max-width: 200px;
+    margin-bottom: 7px !important;
+    width: 70%;
+    min-width: 200px;
     height: auto;
+    /* max-height: 72px;
+    overflow-y: scroll; */
 }
 
 .movie-release-date {
@@ -32,4 +38,58 @@
     /* width: 100%; */
     background-size: 100% auto !important;
     /* min-width: 132px; */
+    padding-bottom: 61%;
+}
+
+
+.movie-description {
+    display: inline-block;
+    /* max-height: 63px;
+    overflow-y: scroll; */
+}
+
+/* tablet */
+.movie-cell--tablet {
+    height: 245px;
+}
+
+.movie-title--tablet {
+    margin-top: 4px;
+    min-width: 217px;
+}
+
+.poster-container--tablet {
+    flex-basis: 99px;
+    min-width: 60px;
+    padding-bottom: 0;
+    margin-top: 6px;
+    margin-left: 10px;
+    height: 149px;
+}
+
+.movie-description--tablet {
+    margin: 10px 10px 0;
+}
+
+.movies-list--tablet {
+    padding-top: 10px;
+}
+
+/* Mobile devices */
+.movie-cell--mobile {
+    height: 245px;
+    min-width: 388px;
+    margin: auto;
+}
+
+.movies-list--mobile {
+    padding-top: 10px;
+}
+
+.poster-container--mobile {
+    margin-top: 6px;
+    margin-left: 10px;
+    flex-basis: 15.5%;
+    background-size: 100% auto !important;
+    padding-bottom: 23%;
 }
