--- a/src/components/number-rating-circle/number-rating-circle.module.scss
+++ b/src/components/number-rating-circle/number-rating-circle.module.scss
@@ -1,3 +1,4 @@
+@use 'src/index.module.scss';
 .number-rating-circle {
     position: absolute;
     width: 30px;
@@ -7,11 +8,10 @@
     background-color: transparent;
     right: 7px;
     top: 8px;
-}
-
-.number-rating-circle__rating {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    &__rating{
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
