--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -1,15 +1,20 @@
-.text{
-    font-family: 'Inter', sans-serif;
+.text {
+  font-family: 'Inter', sans-serif;
+  &--font-size{
+    &--12px{
+      font-size: 12px;
+    }
+    &--20px{
+      font-size: 20px;
+    }
+    &--31px{
+      font-size: 31px;
+    }
+  }
 }
-.text--font-size--12px{
-    font-size: 12px;
+.text--color--000 {
+  color: #000;
 }
-.text--font-size--20px{
-    font-size: 20px;
-}
-.text--color--000{
-    color: #000;
-}
-.text--color--827E7E{
-    color: #827E7E;
+.text--color--827E7E {
+  color: #827e7e;
 }
