--- a/src/components/paginator/paginator.scss
+++ b/src/components/paginator/paginator.scss
@@ -1,16 +1,16 @@
-.ant-pagination-item-active{
-  background: #1890FF !important;
+.ant-pagination-item-active {
+  background: #1890ff !important;
   line-height: 21px !important;
-  a{
+  a {
     color: #ffffff !important;
-    background-color: #1890FF !important;
-    &:focus-visible{
-      a{
+    background-color: #1890ff !important;
+    &:focus-visible {
+      a {
         color: #fff !important;
       }
     }
-    &:hover{
-      a{
+    &:hover {
+      a {
         color: #fff !important;
       }
     }
