--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -3,6 +3,7 @@
   height: 54px !important;
   margin: auto !important;
   margin-top: 13px !important;
+  margin-bottom: 19px !important;
   @media screen and (max-width: 830px) {
     margin-top: 0 !important;
   }
